--- a/USACO-PREP/Gift1/gift1.in
+++ b/USACO-PREP/Gift1/gift1.in
@@ -1,5 +1,24 @@
-DAVE
+5
+dave
+laura
+owen
+vick
+amr
+dave
 200 3
-LAURA
-OWEN
-VICK
+laura
+owen
+vick
+owen
+500 1
+dave
+amr
+150 2
+vick
+owen
+laura
+0 2
+amr
+vick
+vick
+0 0
